k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  creationTimestamp: null
  name: nginx-test
spec:
  rules:
  - http:
      paths:
      - backend:
          service:
            name: nginx-test
            port:
              number: 8080
        path: /
        pathType: Exact
status:
  loadBalancer: {}
